# shit-1170

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  book.toml  netlify.toml  package.json  rsbuild.config.ts
assembly/: tsconfig.json
assets/: a.css  main.css
public/: index.html
src/: App.tsx  README.md  SUMMARY.md  app.html  env.d.ts  lib.rs  main.rs
src/css/: footer.css  header.css  info_holders.css  info_links.css  info_lp.css  info_lp_ref.css  main.css  nav.css  section.css  section_huggies.css  section_info.css  style.css
src/logic/: enum_route.rs  fn_random_slogan.rs  slogans.rs
src/pages/: app.rs  page_about.rs  page_holders.rs  page_home.rs  page_pools.rs
src/routes/: +layout.svelte  +page.svelte
src/ts/: hello.ts  routes.ts  shit_config.ts  slogans.ts  useRandomSlogan.ts
src/ts/hooks/: useRandomSlogan.ts
src/ts/info/: shit_config.ts  shit_holders.ts  shit_lp_price.ts  shit_lp_price_ref.ts
src/ts/near/: near.auth.ts  near.config.ts
src/ts/rhea/: rhea.config.ts
src/tsx/: app_footer.tsx  app_header.tsx  app_nav.tsx  app_section_routing.tsx  near_auth_button.tsx  section_huggies.tsx  section_info.tsx  section_loading.tsx  section_routing.tsx  section_swap.tsx
src/tsx/components/: near_auth_button.tsx
src/tsx/info_components/: info_holders.tsx  info_links.tsx  info_lp.tsx  info_lp_ref.tsx
