[package]
name = "shit-1170"
version = "0.1.0"
authors = ["Nathan Renfroe <thesunshiningmin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shit-1170"
path = "src/main.rs"



# =================================================
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# =================================================

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.63"
web-sys = { version = "0.3.90", features = ["Crypto", "SubtleCrypto", "Window", "HtmlDocument", "Location", "Request", "RequestInit", "Response", "console", "Headers"] }


# =================================================
# =================================================

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
